--- a/index.html
+++ b/index.html
@@ -3,178 +3,196 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hospedar e Gerar QR Code</title>
+    <title>Gerador de QR Code para PDF</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
     <style>
       * {
         box-sizing: border-box;
         font-family: "Segoe UI", sans-serif;
       }
+
       body {
-        background: #f0f2f5;
+        background-color: #f8fafc;
         display: flex;
         justify-content: center;
         align-items: center;
         min-height: 100vh;
         margin: 0;
       }
-      .card {
+
+      .container {
         background: white;
-        padding: 2rem;
-        border-radius: 20px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        width: 90%;
-        max-width: 400px;
+        padding: 2.5rem;
+        border-radius: 16px;
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
         text-align: center;
+        width: 100%;
+        max-width: 400px;
       }
-      .upload-box {
-        border: 2px dashed #3b82f6;
-        padding: 30px;
-        border-radius: 15px;
-        cursor: pointer;
-        margin: 20px 0;
-        background: #eff6ff;
+
+      h1 {
+        color: #1e293b;
+        margin-bottom: 1.5rem;
+        font-size: 1.5rem;
       }
-      #fileInput {
-        display: none;
+
+      input {
+        width: 100%;
+        padding: 14px;
+        margin-bottom: 1rem;
+        border: 2px solid #e2e8f0;
+        border-radius: 10px;
+        font-size: 1rem;
+        outline: none;
+        transition: border-color 0.2s;
       }
+
+      input:focus {
+        border-color: #3b82f6;
+      }
+
       button {
         width: 100%;
-        padding: 15px;
+        padding: 14px;
         border: none;
         border-radius: 10px;
-        font-weight: bold;
-        cursor: pointer;
-        transition: 0.2s;
         font-size: 1rem;
+        font-weight: 600;
+        cursor: pointer;
+        transition:
+          transform 0.1s,
+          opacity 0.2s;
+        margin-bottom: 10px;
       }
-      .btn-main {
-        background: #3b82f6;
+
+      button:active {
+        transform: scale(0.98);
+      }
+
+      .btn-generate {
+        background-color: #3b82f6;
         color: white;
       }
-      .btn-main:hover {
-        background: #2563eb;
+
+      .btn-pdf {
+        background-color: #10b981;
+        color: white;
+        display: none; /* Escondido até gerar o QR */
       }
-      #loading {
-        display: none;
-        color: #3b82f6;
-        margin: 15px 0;
-        font-weight: 500;
-      }
-      #result {
-        display: none;
-        margin-top: 20px;
-      }
-      .link-display {
-        background: #f8fafc;
-        padding: 10px;
-        border-radius: 8px;
-        border: 1px solid #e2e8f0;
-        word-break: break-all;
-        color: #1e40af;
-        font-size: 0.9rem;
-        margin-bottom: 15px;
-        display: block;
-      }
+
       #qrcode {
+        margin: 2rem 0;
         display: flex;
         justify-content: center;
-        margin-top: 15px;
+      }
+
+      #qrcode img {
+        border: 10px solid white;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      }
+
+      .footer-text {
+        font-size: 0.8rem;
+        color: #94a3b8;
+        margin-top: 1rem;
       }
     </style>
   </head>
   <body>
-    <div class="card">
-      <h2>Upload & QR Code</h2>
-      <p style="color: #64748b; font-size: 0.9rem">Fotos ou Vídeos</p>
+    <div class="container">
+      <h1>Gerador de QR Code</h1>
 
-      <div
-        class="upload-box"
-        onclick="document.getElementById('fileInput').click()"
-      >
-        <span id="fileName">Clique para selecionar</span>
-        <input type="file" id="fileInput" onchange="updateName()" />
-      </div>
+      <input
+        type="url"
+        id="urlInput"
+        placeholder="Cole seu link aqui..."
+        autocomplete="off"
+      />
 
-      <button class="btn-main" id="upBtn" onclick="upload()">
-        Fazer Upload Agora
+      <button class="btn-generate" onclick="generateQR()">Gerar QR Code</button>
+
+      <div id="qrcode"></div>
+
+      <button id="pdfBtn" class="btn-pdf" onclick="downloadPDF()">
+        Salvar em PDF
       </button>
 
-      <div id="loading">🚀 Enviando... aguarde</div>
-
-      <div id="result">
-        <span class="link-display" id="fileUrl"></span>
-        <button
-          onclick="copyLink()"
-          style="background: #10b981; color: white; margin-bottom: 10px"
-        >
-          Copiar Link
-        </button>
-        <div id="qrcode"></div>
-      </div>
+      <p class="footer-text">
+        O PDF será gerado em tamanho A4 com o código centralizado.
+      </p>
     </div>
 
     <script>
-      function updateName() {
-        const input = document.getElementById("fileInput");
-        if (input.files.length > 0)
-          document.getElementById("fileName").innerText = input.files[0].name;
-      }
+      const urlInput = document.getElementById("urlInput");
+      const qrcodeContainer = document.getElementById("qrcode");
+      const pdfBtn = document.getElementById("pdfBtn");
 
-      async function upload() {
-        const file = document.getElementById("fileInput").files[0];
-        if (!file) return alert("Selecione um arquivo!");
+      function generateQR() {
+        const url = urlInput.value.trim();
 
-        const btn = document.getElementById("upBtn");
-        const loader = document.getElementById("loading");
-        const resultDiv = document.getElementById("result");
-
-        btn.style.display = "none";
-        loader.style.display = "block";
-        resultDiv.style.display = "none";
-
-        const formData = new FormData();
-        formData.append("file", file);
-
-        try {
-          // Usando o file.io que é mais amigável com arquivos locais para testes
-          const response = await fetch("https://file.io/?expires=1w", {
-            method: "POST",
-            body: formData,
-          });
-
-          const data = await response.json();
-
-          if (data.success) {
-            showResult(data.link);
-          } else {
-            throw new Error();
-          }
-        } catch (e) {
-          alert(
-            "Erro de permissão do navegador (CORS). Tente usar um arquivo menor ou abra este HTML em um servidor online (como GitHub Pages).",
-          );
-          btn.style.display = "block";
-        } finally {
-          loader.style.display = "none";
+        if (!url) {
+          alert("Por favor, insira um link válido.");
+          return;
         }
-      }
 
-      function showResult(url) {
-        document.getElementById("result").style.display = "block";
-        document.getElementById("fileUrl").innerText = url;
-        document.getElementById("qrcode").innerHTML = "";
-        new QRCode(document.getElementById("qrcode"), {
+        // Limpa QR anterior
+        qrcodeContainer.innerHTML = "";
+
+        // Cria o novo QR Code
+        new QRCode(qrcodeContainer, {
           text: url,
-          width: 180,
-          height: 180,
+          width: 256,
+          height: 256,
+          colorDark: "#000000",
+          colorLight: "#ffffff",
+          correctLevel: QRCode.CorrectLevel.H,
         });
+
+        // Mostra o botão de PDF após o render
+        setTimeout(() => {
+          pdfBtn.style.display = "block";
+        }, 200);
       }
 
-      function copyLink() {
-        const url = document.getElementById("fileUrl").innerText;
-        navigator.clipboard.writeText(url);
-        alert("Copiado!");
+      function downloadPDF() {
+        const { jsPDF } = window.jspdf;
+        const doc = new jsPDF();
+
+        // Tenta capturar a imagem gerada (QRCode.js gera uma <img> ou <canvas>)
+        const qrImg = qrcodeContainer.querySelector("img");
+        const qrCanvas = qrcodeContainer.querySelector("canvas");
+
+        // Obtém o DataURL da imagem
+        const imgData = qrImg ? qrImg.src : qrCanvas.toDataURL("image/png");
+
+        if (!imgData) {
+          alert("Erro ao capturar imagem do QR Code.");
+          return;
+        }
+
+        // Título no PDF
+        doc.setFont("helvetica", "bold");
+        doc.setFontSize(22);
+        doc.text("QR CODE GERADO", 105, 40, { align: "center" });
+
+        // Desenha o QR Code centralizado (A4 tem 210mm de largura)
+        // x=55, y=60, largura=100, altura=100
+        doc.addImage(imgData, "PNG", 55, 60, 100, 100);
+
+        // Adiciona o link abaixo para conferência
+        doc.setFont("helvetica", "normal");
+        doc.setFontSize(12);
+        doc.setTextColor(100);
+        const linkText =
+          urlInput.value.length > 50
+            ? urlInput.value.substring(0, 50) + "..."
+            : urlInput.value;
+        doc.text(linkText, 105, 170, { align: "center" });
+
+        // Nome do arquivo baseado no link (opcional)
+        doc.save("meu-qrcode.pdf");
       }
     </script>
   </body>
